--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "husky": "^1.3.1",
-    "lint-staged": "^8.1.5",
     "prettier": "^1.16.4",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
@@ -14,7 +13,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint-staged": "lint-staged"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -25,9 +25,17 @@
     "not ie <= 11",
     "not op_mini all"
   ],
+  "lint-staged": {
+   "*.js": "eslint",
+   "*.css": "stylelint"
+  },
   "husky": {
     "hooks": {
-      "pre-commit": "npx eslint src && CI=true npm test"
     }
-  }
+  },
+  "devDependencies": {
+    "lint-staged": "^8.1.5",
+    "pre-commit": "^1.2.2"
+  },
+  "pre-commit": "lint-staged"
 }
